Allow optionally disable some features

--- a/Kconfig
+++ b/Kconfig
@@ -47,5 +47,34 @@ menu "SSD1306 Configuration"
         depends on SSD1306_I2C_ENABLED
         hex "SSD1306 address"
         default 0x3C
+
+    config DISPLAY_EXTRA_FEATURES
+        bool "Enable extra features"
+        depends on SSD1306_I2C_ENABLED
+        default y
+
+    config DISPLAY_RECTANGLE_ENABLED
+        bool "Enable draw_rectangle"
+        depends on DISPLAY_EXTRA_FEATURES
+        select DISPLAY_LINE_ENABLED
+        default y
+
+    config DISPLAY_LINE_ENABLED
+        bool "Enable draw_line"
+        depends on DISPLAY_EXTRA_FEATURES
+        select DISPLAY_PIXEL_ENABLED
+        default y
+
+    config DISPLAY_PIXEL_ENABLED
+        bool "Enable draw_pixel"
+        depends on DISPLAY_EXTRA_FEATURES
+        default y
+
+    config DISPLAY_PROGRESS_BAR_ENABLED
+        bool "Enable draw_progress_bar"
+        depends on DISPLAY_EXTRA_FEATURES
+        select DISPLAY_LINE_ENABLED
+        select DISPLAY_RECTANGLE_ENABLED
+        default y
 endmenu
 
